<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlcoTester</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_reset">Reset</string>
    <string name="action_remove">Remove</string>
    <string name="action_settings">Settings</string>
    <string name="promil">‰</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="kg_abbreviation">kg</string>

    <string name="sex_preference_key">sex_preference</string>
    <string name="weight_preference_key">weight_preference</string>
    <string name="image_picker_title">Pick drink image</string>
    <string name="no_drink_selected">No drink selected</string>
    <string name="tomorrow">tomorrow</string>
    <string name="more_than_a_day">more than a day</string>
    <string name="tooltip_time_to_sober">Here you can see \n when you will get sober</string>
    <string name="tooltip_per_mile">Here is your alcohol \n in blood content</string>
    <string name="tooltip_tab_bar">Swipe right or click Edit \n to go to drink editor</string>
    <string name="tooltip_picker_in_status">Press drinks that you have drank \n or add new type
        of drink</string>

    <string name="tooltip_drink_name">Enter your drink name here</string>
    <string name="tooltip_drink_image">Click to change drink image</string>
    <string name="tooltip_drink_edit_seekbars">Here you can change \n your drink content</string>
    <string name="tooltip_picker_in_edit">Press drink to change it</string>
    <string name="ml"> ml</string>
    <string name="beer">Beer</string>
    <string name="wine">Wine</string>
    <string name="vodka">Vodka</string>
    <string name="custom">Custom</string>

</resources>
